--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,9 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  display: flex;
+  min-width: 100vw;
+  min-height: 100vh;
+}
+
 :root {
   background-color: #181a20;
   color: #e7e6e6;
+}
+
+#root {
+  display: flex;
+  flex-grow: 1;
 }
 
 /* :root {
