--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,6 +18,11 @@ body {
   flex-grow: 1;
 }
 
+/* input[type='date']::-webkit-calendar-picker-indicator {
+  -webkit-appearance: none;
+  display: none;
+} */
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
